--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -45,7 +46,35 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "@babel/runtime": "^7.25.0",
+    "@faker-js/faker": "^9.0.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.6.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/json-stable-stringify": "^1.0.36",
+    "@types/lodash": "^4.17.7",
+    "@types/lodash-es": "^4.17.12",
+    "@types/react-native-signature-capture": "^0.4.8",
+    "@types/redux-mock-store": "^1.0.6",
+    "@types/tinycolor2": "^1.4.6",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-optional-require": "^0.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-custom-rules": "file:linter",
+    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-local-rules": "^3.0.2",
+    "eslint-plugin-no-type-assertion": "^1.3.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-testing-library": "^6.3.0",
+    "jest-environment-node": "^29.7.0",
+    "pod-install": "0.2.2",
+    "prettier": "^3.2.5",
+    "react-native-clean-project": "^4.0.3",
+    "react-native-svg-transformer": "^1.5.0",
+    "ts-jest": "^29.1.3"
   },
   "private": true
 }
